--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "normalize.css": "^8.0.1",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
@@ -25,6 +26,7 @@
     "eslint": "^8.22.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vue": "^9.3.0",
+    "less": "^4.1.3",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
     "typescript": "~4.7.4",
@@ -32,4 +34,3 @@
     "vue-tsc": "^1.0.9"
   }
 }
-
