--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "element-plus": "^2.2.25",
     "normalize.css": "^8.0.1",
     "pinia": "^2.0.26",
     "vue": "^3.2.45",
@@ -31,6 +32,8 @@
     "npm-run-all": "^4.1.5",
     "prettier": "^2.8.0",
     "typescript": "~4.7.4",
+    "unplugin-auto-import": "^0.12.0",
+    "unplugin-vue-components": "^0.22.11",
     "vite": "^3.2.4",
     "vue-tsc": "^1.0.9"
   }
